# mdl_collector

./: .gitignore  README.md  pyproject.toml
.github/workflows/: scrape.yml
data/unhcr/: datasets.csv  metadata.csv
data/world_bank/: metadata.csv
src/: get.py  list.py  main.py  utils.py
src/orchestrators/: fetch_datasets.py  list_metadata.py
src/schemas/: __init__.py  column_mappings.py
src/sources/: unhcr.py  worldbank.py
