[project]
name = "unhcr-scraper"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "pandas>=2.2.2,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "tqdm>=4.66.2,<5.0.0",
    "numpy<2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.4,<7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
